// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block 1`] = `
{
  "kind": "Block",
  "statements": [
    {
      "argument": {
        "definitions": [
          {
            "expression": {
              "kind": "StringLiteral",
              "value": "hello",
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "kind": "ValueIdentifier",
              "value": "msg",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "kind": "ValueIdentifier",
        "value": "log",
      },
      "kind": "FunctionCall",
    },
    {
      "expression": {
        "kind": "NumberLiteral",
        "value": 4,
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "start": {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "ConstantDefinition",
    },
  ],
}
`;

exports[`Block.empty 1`] = `
{
  "kind": "Block",
  "statements": [],
}
`;

exports[`ConstantDefinition 1`] = `
{
  "expression": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`ConstantDefinition.functionCall 1`] = `
{
  "expression": {
    "argument": {
      "definitions": [
        {
          "expression": {
            "_meta": {
              "end": {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
              "start": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
            },
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "identifier": {
            "_meta": {
              "end": {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
              "start": {
                "column": 15,
                "line": 1,
                "offset": 14,
              },
            },
            "kind": "ValueIdentifier",
            "value": "point",
          },
          "kind": "NamedLiteral",
        },
      ],
      "kind": "RecordLiteral",
    },
    "identifier": {
      "_meta": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "kind": "ValueIdentifier",
      "value": "foo",
    },
    "kind": "FunctionCall",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "ConstantDefinition",
}
`;

exports[`IfStatement 1`] = `
{
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "guard": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`Program 1`] = `
{
  "kind": "Program",
  "statements": [
    {
      "kind": "NamedRecordDefinitionStatement",
      "namedRecordDefinition": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": {
          "definitions": [
            {
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                  "start": {
                    "column": 15,
                    "line": 2,
                    "offset": 15,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
            {
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                  "start": {
                    "column": 26,
                    "line": 2,
                    "offset": 26,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    {
      "expression": {
        "kind": "NumberLiteral",
        "value": 1,
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 12,
            "line": 3,
            "offset": 49,
          },
          "start": {
            "column": 9,
            "line": 3,
            "offset": 46,
          },
        },
        "kind": "ValueIdentifier",
        "value": "one",
      },
      "kind": "ConstantDefinition",
    },
    {
      "expression": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": {
          "definitions": [
            {
              "expression": {
                "_meta": {
                  "end": {
                    "column": 29,
                    "line": 4,
                    "offset": 83,
                  },
                  "start": {
                    "column": 26,
                    "line": 4,
                    "offset": 80,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 24,
                    "line": 4,
                    "offset": 78,
                  },
                  "start": {
                    "column": 23,
                    "line": 4,
                    "offset": 77,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            {
              "expression": {
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 32,
                    "line": 4,
                    "offset": 86,
                  },
                  "start": {
                    "column": 31,
                    "line": 4,
                    "offset": 85,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 14,
            "line": 4,
            "offset": 68,
          },
          "start": {
            "column": 9,
            "line": 4,
            "offset": 63,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    {
      "expression": {
        "_meta": {
          "end": {
            "column": 0,
            "line": 7,
            "offset": 105,
          },
          "start": {
            "column": 8,
            "line": 6,
            "offset": 100,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`Program.2 1`] = `
{
  "kind": "Program",
  "statements": [
    {
      "kind": "NamedRecordDefinitionStatement",
      "namedRecordDefinition": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordDefinition",
        "record": {
          "definitions": [
            {
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 16,
                    "line": 2,
                    "offset": 16,
                  },
                  "start": {
                    "column": 15,
                    "line": 2,
                    "offset": 15,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
            {
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 27,
                    "line": 2,
                    "offset": 27,
                  },
                  "start": {
                    "column": 26,
                    "line": 2,
                    "offset": 26,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "number",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
      },
    },
    {
      "expression": {
        "argument": {
          "definitions": [
            {
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 27,
                    "line": 3,
                    "offset": 64,
                  },
                  "start": {
                    "column": 22,
                    "line": 3,
                    "offset": 59,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "kind": "NamedDefinition",
              "typeTag": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
                "kind": "TypeTag",
              },
            },
          ],
          "kind": "RecordDefinition",
        },
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "_meta": {
                  "end": {
                    "column": 20,
                    "line": 4,
                    "offset": 97,
                  },
                  "start": {
                    "column": 15,
                    "line": 4,
                    "offset": 92,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "point",
              },
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 12,
                    "line": 4,
                    "offset": 89,
                  },
                  "start": {
                    "column": 11,
                    "line": 4,
                    "offset": 88,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "ConstantDefinition",
            },
            {
              "expression": {
                "identifier": {
                  "kind": "TypeIdentifier",
                  "value": "Point",
                },
                "kind": "NamedRecordLiteral",
                "recordLiteral": {
                  "definitions": [
                    {
                      "expression": {
                        "_meta": {
                          "end": {
                            "column": 22,
                            "line": 5,
                            "offset": 120,
                          },
                          "start": {
                            "column": 21,
                            "line": 5,
                            "offset": 119,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "identifier": {
                        "_meta": {
                          "end": {
                            "column": 19,
                            "line": 5,
                            "offset": 117,
                          },
                          "start": {
                            "column": 18,
                            "line": 5,
                            "offset": 116,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "x",
                      },
                      "kind": "NamedLiteral",
                    },
                    {
                      "expression": {
                        "_meta": {
                          "end": {
                            "column": 28,
                            "line": 5,
                            "offset": 126,
                          },
                          "start": {
                            "column": 27,
                            "line": 5,
                            "offset": 125,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "identifier": {
                        "_meta": {
                          "end": {
                            "column": 25,
                            "line": 5,
                            "offset": 123,
                          },
                          "start": {
                            "column": 24,
                            "line": 5,
                            "offset": 122,
                          },
                        },
                        "kind": "ValueIdentifier",
                        "value": "y",
                      },
                      "kind": "NamedLiteral",
                    },
                  ],
                  "kind": "RecordLiteral",
                },
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "kind": "AnonymousFunctionLiteral",
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 18,
            "line": 3,
            "offset": 55,
          },
          "start": {
            "column": 9,
            "line": 3,
            "offset": 46,
          },
        },
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "ConstantDefinition",
    },
    {
      "expression": {
        "identifier": {
          "kind": "TypeIdentifier",
          "value": "Point",
        },
        "kind": "NamedRecordLiteral",
        "recordLiteral": {
          "definitions": [
            {
              "expression": {
                "_meta": {
                  "end": {
                    "column": 29,
                    "line": 7,
                    "offset": 161,
                  },
                  "start": {
                    "column": 26,
                    "line": 7,
                    "offset": 158,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "one",
              },
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 24,
                    "line": 7,
                    "offset": 156,
                  },
                  "start": {
                    "column": 23,
                    "line": 7,
                    "offset": 155,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "x",
              },
              "kind": "NamedLiteral",
            },
            {
              "expression": {
                "kind": "NumberLiteral",
                "value": 2,
              },
              "identifier": {
                "_meta": {
                  "end": {
                    "column": 32,
                    "line": 7,
                    "offset": 164,
                  },
                  "start": {
                    "column": 31,
                    "line": 7,
                    "offset": 163,
                  },
                },
                "kind": "ValueIdentifier",
                "value": "y",
              },
              "kind": "NamedLiteral",
            },
          ],
          "kind": "RecordLiteral",
        },
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 14,
            "line": 7,
            "offset": 146,
          },
          "start": {
            "column": 9,
            "line": 7,
            "offset": 141,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "ConstantDefinition",
    },
    {
      "argument": {
        "definitions": [
          {
            "expression": {
              "_meta": {
                "end": {
                  "column": 25,
                  "line": 8,
                  "offset": 194,
                },
                "start": {
                  "column": 20,
                  "line": 8,
                  "offset": 189,
                },
              },
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "identifier": {
              "_meta": {
                "end": {
                  "column": 18,
                  "line": 8,
                  "offset": 187,
                },
                "start": {
                  "column": 13,
                  "line": 8,
                  "offset": 182,
                },
              },
              "kind": "ValueIdentifier",
              "value": "point",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "_meta": {
          "end": {
            "column": 12,
            "line": 8,
            "offset": 181,
          },
          "start": {
            "column": 3,
            "line": 8,
            "offset": 172,
          },
        },
        "kind": "ValueIdentifier",
        "value": "increment",
      },
      "kind": "FunctionCall",
    },
    {
      "expression": {
        "_meta": {
          "end": {
            "column": 0,
            "line": 11,
            "offset": 210,
          },
          "start": {
            "column": 8,
            "line": 10,
            "offset": 205,
          },
        },
        "kind": "ValueIdentifier",
        "value": "point",
      },
      "kind": "DEBUG_Log",
    },
  ],
}
`;

exports[`ReturnStatement 1`] = `
{
  "expression": {
    "kind": "StringLiteral",
    "value": "string",
  },
  "kind": "ReturnStatement",
}
`;

exports[`string 1`] = `
{
  "kind": "StringLiteral",
  "value": "hello world",
}
`;

exports[`string 2`] = `
{
  "kind": "StringLiteral",
  "value": "hello
 world",
}
`;
